2009-06-25  Martin Leidig  <mleidig@schlund.de>

	Fixed HTTP caching header problem: adding custom HTTP headers using
	SPDocument.addResponseHeader caused that the "Cache-Control" and
	"Expires" headers weren't set. Now these headers are always set if
	they were not overridden by the application.

2009-05-25  Martin Leidig  <mleidig@schlund.de>

	Fixed pfx:isVisible behaviour for non-existing pages: now -1 is
	returned again (instead of 1). Because looking if a page is configured
	doesn't mean that it is not existing (since we support static pages
	without context configuration), we additionally check if a target
	exists for pages which aren't configured.

2009-05-18  Martin Leidig  <mleidig@schlund.de>

	Added support for deferring image includes until runtime by setting
	the <pfx:image> or <pfx:xinp type="image"> element's 'level' attribute
	to 'runtime'. The 'src', 'themed-path', 'themed-img' and 'alt' values
	can be lately bound using the according <pfx:src>, <pfx:themed-path>,
	<pfx:themed-img> and <pfx:alt> elements, which are evaluated at
	runtime.

2009-05-15  Martin Leidig  <mleidig@schlund.de>

	Added support for inline-javascript compression. Compression can be
	enabled/disabled setting an according param in the global or
	standardpage section:
	<param name="compress-inline-javascript" value="true"/>
	You can use cus:choose/cus:when to enable/disable compression for a
	specific mode.
	By default we'll try to use the YUI compressor if it's availabe in the
	classpath. If you want to explicitly exclude a script section from
	compression you can set the compress attribute to false:
	<pfx:script compress="false">

2009-05-13  Martin Leidig  <mleidig@schlund.de>

	Improved XSLT stylesheet compilation error handling: Remember
	TransformerExceptions and add them as TransformerConfigurationException
	cause to reflect the real problem and not just display the pretty vacant 
	'Failed to compile stylesheet' message.

2009-05-08  Martin Leidig  <mleidig@schlund.de>
