@@ -9,6 +9,7 @@ import java.net.URI;
 import java.net.URL;
 
 import de.schlund.pfixcore.exception.PustefixRuntimeException;
+import de.schlund.pfixcore.util.JarFileURLConnection;
 
 public class ModuleResource implements Resource {
 
@@ -31,6 +32,17 @@ public class ModuleResource implements Resource {
         this.uri = uri;
     }
     
+    private JarURLConnection getConnection() throws IOException {
+        
+        JarURLConnection con = new JarFileURLConnection(url);
+        //Use own JarURLConnection implementation to workaround problem
+        //with standard implementation, which causes too many open file
+        //handles because they are not destroyed until garbage collection
+        //JarURLConnection con = (JarURLConnection)url.openConnection();
+        //con.setUseCaches(false);
+        return con;
+    }
+    
     public boolean canRead() {
         //TODO: implement
         return true;
@@ -39,8 +51,7 @@ public class ModuleResource implements Resource {
     public boolean exists() {
         if(url == null) return false;
         try {
-            JarURLConnection con = (JarURLConnection)url.openConnection();
-            con.setUseCaches(false);
+            JarURLConnection con = getConnection();
             con.getJarEntry();
             return true;
         } catch(FileNotFoundException x) {
@@ -52,8 +63,7 @@ public class ModuleResource implements Resource {
 
     public InputStream getInputStream() throws IOException {
         if(url == null) throw new IOException("Resource doesn't exist");
-        JarURLConnection con = (JarURLConnection)url.openConnection();
-        con.setUseCaches(false);
+        JarURLConnection con = getConnection();
         return con.getInputStream();
     }
 
@@ -65,8 +75,7 @@ public class ModuleResource implements Resource {
     public long lastModified() {
         if(url == null) return 0;
         try {
-            JarURLConnection con = (JarURLConnection)url.openConnection();
-            con.setUseCaches(false);
+            JarURLConnection con = getConnection();
             return con.getLastModified();
         } catch(IOException x) {
             throw new RuntimeException("Error checking modification time", x);
